--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit==1.18.0
+#streamlit==1.18.0
 docx2txt
 wikipedia
 pdfplumber
@@ -12,3 +12,5 @@ python-docx
 torch
 transformers
 sentencepiece
+streamlit>=1.31,<1.40
+altair>=5.2,<6
